fix alignment

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body, html {
     height: 100%;
     margin: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #282c34;
